# matp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Next AlphaFold.py  README.md  fast_ghost.rs  mod.rs  requirements.txt
.github/workflows/: python-package.yml  rust.yml
docs/: MAP.md  fractal_group_ratchet.md  protocol.md  security.md  zkp session recovery.md
docs/examples/: basic_usage.md
python/: .gitignore  FINAL_STATUS.txt  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  QUICK_START.md  READY_TO_UPLOAD.md  UPLOAD_CHECKLIST.txt  UPLOAD_NOW.txt  __init__.py  final_test.py  matryoshka.py  requirements.txt  setup.py  test_matryoshka.py  upload_to_pypi.bat
python/New folder/: LICENSE  README.md  matp.py  test_matryoshka.py
python/examples/: demo_ghost.py
python/matp/: __init__.py  protocol.py
python/matp/crypto/: __init__.py  fractal.py  quantum.py
python/matp/ghost/: __init__.py  engine.py  fast_ghost.py
python/matp/ghost/strategies/: __init__.py  exif_image.py  json_api.py
python/matp/groups/: __init__.py  fractal_ratchet.py  manager.py
python/matp/mitm/: __init__.py  bloom_filter.py  connection_pool.py  flow_fingerprint.py  lightning.py  predictive_crypto.py  stochastic_auth.py  zkp_path.py
python/matp/ratchet/: __init__.py  adaptive.py  rclassical.py
python/matp/zkp/: __init__.py  sigma.py
python/tests/: __init__.py  test_ghost.py  test_groups.py  test_protocol.py  test_quantum.py  test_zkp.py
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/examples/: demo_basic.rs  demo_complete.rs  demo_ghost.rs  demo_groups.rs  demo_mitm.rs  demo_quantum.rs  demo_zkp.rs  fast_ghost_demo.rs
rust/core/src/: lib.rs  protocol.rs  session.rs
rust/core/src/crypto/: classical.rs  fractal.rs  hybrid.rs  mod.rs  quantum.rs
rust/core/src/crypto/quantum/: kem.rs  mod.rs  signature.rs
rust/core/src/dht/: kademlia.rs  mod.rs
rust/core/src/ghost/: dead_drop.rs  engine.rs  fast_ghost.rs  mod.rs  service_rotation.rs  timing.rs
rust/core/src/ghost/cover_traffic/: json_templates.rs  mod.rs
rust/core/src/ghost/strategies/: exif_image.rs  json_api.rs  mod.rs
rust/core/src/groups/: fractal_ratchet.rs  manager.rs  mod.rs
rust/core/src/mitm/: bloom_filter.rs  connection_pool.rs  flow_fingerprint.rs  lightning.rs  mod.rs  predictive_crypto.rs  stochastic_auth.rs  zkp_path.rs
rust/core/src/ratchet/: adaptive.rs  classical.rs  mod.rs  rclassical.rs  state.rs
rust/core/src/zkp/: engine.rs  mod.rs
rust/core/src/zkp/circuit/: innocence.r1cs  mod.rs
tests/: lib.rs
tests/benchmarks/: mod.rs  performance.rs  vs_signal.rs
tests/integration/: end_to_end.rs  mod.rs  zkp_innocence.rs
tests/tests/: test_ghost.rs  test_groups.rs  test_mitm.rs  test_protocol.rs  test_quantum.rs  test_session.rs  test_zkp.rs  test_zkp_path.rs
