[package]
name = "mtp-core"
version = "0.1.0"
edition = "2021"
authors = ["Sangeet Sharma"]
description = "Core cryptographic library for the Matryoshka Protocol (MTP)"
license = "Apache-2.0"

[lib]
name = "mtp_core"
path = "src/lib.rs"

[[example]]
name = "fast_ghost_demo"
path = "examples/fast_ghost_demo.rs"

[dependencies]
# Classical Cryptography
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.21"
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }

# Post-Quantum Cryptography
oqs = { version = "0.10", features = ["kyber", "dilithium"] }

# Image processing
image = "0.24"
kamadak-exif = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Utilities
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
uint = "0.9"

[features]
default = []
