[package]
name = "mtp-core"
version = "0.1.0"
edition = "2021"
authors = ["Sangeet Sharma"]
description = "Core cryptographic library for the Matryoshka Protocol (MTP)"
license = "Apache-2.0"

[lib]
name = "mtp_core"
path = "src/lib.rs"

[dependencies]
# Classical Cryptography
rand_core = "0.6.4"
x25519-dalek = { version = "2.0.1", features = ["serde", "static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10.8"

# Post-Quantum Cryptography (using a standard FFI wrapper)
oqs = { version = "0.10.1", features = ["kyber", "dilithium"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1" # MessagePack for compact serialization
base64 = "0.21.7"

# Asynchronous Operations (for DHT)
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread", "macros"] }

# Steganography Dependencies
image = "0.24.7"
serde_json = "1.0"
kamadak-exif = "0.5"

# Utilities
thiserror = "1.0"
uint = "0.9"
rand = "0.8.5"
rand_chacha = "0.3"
